--- a/bash/.inputrc
+++ b/bash/.inputrc
@@ -1,10 +1,11 @@
 set editing-mode vi
-$if mode=vi
-set keymap vi-command
-# these are for vi-command mode
-Control-l: clear-screen
 
-set keymap vi-insert
-# these are for vi-insert mode
-Control-l: clear-screen 
+$if mode=vi
+    set keymap vi-command
+    # keympas for command mode
+    Control-l: clear-screen
+
+    set keymap vi-insert
+    # keymaps for insert mode
+    Control-l: clear-screen 
 $endif
