--- a/bash/.inputrc
+++ b/bash/.inputrc
@@ -7,6 +7,6 @@ $if mode=vi
 
     set keymap vi-insert
     # keymaps for insert mode
+    Control-h: backward-kill-word 
     Control-l: clear-screen 
-
 $endif
